I think I fixed the footer

--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -48,49 +48,49 @@
     </nav>
     <!-- Header -->
 
-    <div>
-      {% block content %}
-      {% endblock content %}
-    </div>
+    <div class="flex-wrapper">
+        <!-- Main page content -->
+        <div>
+          {% block content %}
+          {% endblock content %}
+        </div>
 
-    <!-- Footer -->
-    <section class="p-3 ms-footer d-none d-md-block">
-      <div class="container">
-        <div class="row mt-3 text-white">
-          <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4">
-            <b>MOVIES STORE</b>
-            <hr />
-            <p>Welcome to Movies Store, your premier online destination for a cinematic
-              adventure like no other! Dive into the world of movies from the comfort of your own home with our user-friendly
-              and immersive online movie store.</p>
+        <!-- Footer -->
+        <section class="p-3 ms-footer d-none d-md-block footer">
+          <div class="container">
+            <div class="row mt-3 text-white">
+              <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4">
+                <b>MOVIES STORE</b>
+                <hr />
+                <p>Welcome to Movies Store, your premier online destination for a cinematic adventure like no other! Dive into the world of movies from the comfort of your own home with our user-friendly and immersive online movie store.</p>
+              </div>
+              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                <b>LINKS</b>
+                <hr />
+                <p><a class="nav-link" href="{% url 'home.about' %}">About</a></p>
+              </div>
+              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                <b>CONTACT</b>
+                <hr />
+                <p><i class="fas fa-home me-2"></i> 150-2345 Tokyo-to, Japan</p>
+                <p><i class="fas fa-envelope me-2"></i> info@moviesstore.com</p>
+                <p><i class="fas fa-phone me-2"></i> +81 03-3333-3333</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
-            <b>LINKS</b>
-            <hr />
-            <p><a class="nav-link" href="{% url 'home.about' %}">About</a></p>
+        </section>
+        <section class="p-3 ms-footer-bottom bg-dark">
+          <div class="container d-flex justify-content-between">
+            <div class="me-5 text-white">
+              <span>DESIGNED BY <a href="https://www.x.com/danielgarax" target="_blank">DANIEL CORREA</a> &
+                <a href="https://www.x.com/greglim81" target="_blank">GREG LIM</a>
+              </span>
+            </div>
+            <div class="text-white">
+              <span>© Copyright - 2024</span>
+            </div>
           </div>
-          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
-            <b>CONTACT</b>
-            <hr />
-            <p><i class="fas fa-home me-2"></i> 150-2345 Tokyo-to, Japan</p>
-            <p><i class="fas fa-envelope me-2"></i> info@moviesstore.com</p>
-            <p><i class="fas fa-phone me-2"></i> +81 03-3333-3333</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="p-3 ms-footer-bottom bg-dark">
-      <div class="container d-flex justify-content-between">
-        <div class="me-5 text-white">
-          <span>DESIGNED BY <a href="https://www.x.com/danielgarax" target="_blank">DANIEL CORREA</a> &
-            <a href="https://www.x.com/greglim81" target="_blank">GREG LIM</a>
-          </span>
-        </div>
-        <div class="text-white">
-          <span>© Copyright - 2024</span>
-        </div>
-      </div>
-    </section>
-    <!-- Footer -->
+        </section>
+    </div>
   </body>
 </html>
