--- a/moviesstore/static/css/style.css
+++ b/moviesstore/static/css/style.css
@@ -3,39 +3,61 @@
     fixed;
   background-size: 100% auto;
 }
+
 .navbar a.nav-link {
   color: #FFFEF6 !important;
 }
+
 .bg-dark {
   background-color: #2E2E2E !important;
 }
+
 .ms-footer {
   background-color: #202020;
 }
+
 .ms-footer p {
   color: #7F7F7F;
   font-size: 13px;
 }
+
 .ms-footer a:hover {
   color: #6ab43e;
   text-decoration: none;
 }
+
 .ms-footer-bottom span{
   font-size: 13px;
   line-height: 38px;
 }
+
 .ms-footer-bottom a {
   color: #6ab43e;
   text-decoration: none;
 }
+
 .ms-footer-bottom a:hover {
   color: #fff;
 }
+
 .img-card-200 {
   width: fit-content;
   max-height: 200px;
 }
+
 .img-card-400 {
   width: fit-content;
   max-height: 400px;
 }
+
+.flex-wrapper {
+    display: flex;
+    min-height: 90vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer {
+    margin-top: auto;
+}
+
