Added reset password

--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -41,6 +41,8 @@
             <a class="nav-link"
               href="{% url 'accounts.signup' %}">Sign Up
             </a>
+            <a class="nav-link"
+              href="{% url 'accounts.reset' %}">Reset Password</a>
             {% endif %}
           </div>
         </div>
