--- a/accounts/templates/accounts/reset.html
+++ b/accounts/templates/accounts/reset.html
@@ -6,14 +6,13 @@
       <div class="col-md-8">
         <div class="card shadow p-3 mb-4 rounded">
           <div class="card-body">
-            <h2>Sign Up</h2>
+            <h2>Reset Password</h2>
             <hr />
             <form method="POST">
               {% csrf_token %}
-              {{ template_data.userForm.as_p }}
-              {{ template_data.securityQuestionForm.as_p }}
+              {{ template_data.form.as_p }}
               <button type="submit"
-                class="btn bg-dark text-white">Sign Up
+                class="btn bg-dark text-white">Reset
               </button>
             </form>
           </div>
